--- a/DoAnCDIO2_Genuine_Cosmetic/Views/HomeController1/Index.cshtml
+++ b/DoAnCDIO2_Genuine_Cosmetic/Views/HomeController1/Index.cshtml
@@ -41,7 +41,7 @@
     </div>
 </div>
 <!-- Hero End -->
-<div class="vesitable" style="width:100%; height:1250px;background-color:white; padding-top:64px;">
+<div class="vesitable" style="width:100%; height:1732px;background-color:white; padding-top:64px;">
     <div style="width:94%; padding-left:8px; padding-right:8px; border: 5px solid white; border-radius:20px; margin: 0 auto; background-color:#eae8e8">
         <h1 class="fw-bold mb-0" style="color: #4CB551; text-align: left; margin-top:32px;">Kem Chống Nắng</h1>
         <div class="owl-carousel vegetable-carousel justify-content-center">
@@ -50,7 +50,7 @@
     </div>
 
  
-    <div style="width:94%; height:630px; padding-left:8px; padding-right:8px; border: 5px solid white; margin: 0 auto; background-color:#FF8E4D">
+    <div style="width:94%; height:880px; padding-left:8px; padding-right:8px; border: 5px solid white; margin: 0 auto; background-color:#FF8E4D">
         <a style="width: 100%;">
             <img src="~/Logo_Cosmetic/Sale.png" alt="Alternate Text" style="width: calc(100% + 16px); margin: 0 auto;  display: block; text-align: center; margin-left:-8px;" />
         </a>
@@ -62,7 +62,7 @@
     </div>
 
     </div>
-    <div style="width:94%; padding-left:8px; padding-right:8px; border: 5px solid white; border-radius:20px; margin: 0 auto; background-color:#eae8e8">
+    <div style="width:94%; padding-left:8px; padding-right:8px; border: 5px solid white; border-radius:20px; margin: 0 auto; background-color:#eae8e8; padding-bottom: 32px;">
         <h1 class="fw-bold mb-0" style="color: #4CB551; text-align: left; margin-top:32px;">Bông tẩy trang</h1>
         <div class="owl-carousel vegetable-carousel justify-content-center">
             @await Component.InvokeAsync("Conveyor1")
