--- a/DoAnCDIO2_Genuine_Cosmetic/Views/Shared/Components/Conveyor1/Default.cshtml
+++ b/DoAnCDIO2_Genuine_Cosmetic/Views/Shared/Components/Conveyor1/Default.cshtml
@@ -8,7 +8,7 @@
     <div class="border border-primary rounded position-relative vesitable-item">
         <div class="vesitable-img">
             <a asp-action="Detail" asp-controller="HangHoa" asp-route-id="@item.MaHh">
-                <img src="~/img_sp/@item.Hinh" class="img-fluid w-100 rounded-top" alt="" style="height: 200px;">
+                <img src="~/img_sp/@item.Hinh" class="img-fluid w-100 rounded-top" alt="">
             </a>
         </div>
         <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">@item.TenLoai</div>
